--- a/cart/src/index.css
+++ b/cart/src/index.css
@@ -8,3 +8,22 @@
         font-family: 'Open Sans Variable', sans-serif;
     }
 }
+
+/*
+=============== 
+Navbar
+===============
+*/
+
+.amount-container {
+    position: absolute;
+    top: -0.85rem;
+    right: -0.85rem;
+    width: 1.75rem;
+    height: 1.75rem;
+    background: #a29dff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
