--- a/cart/src/index.css
+++ b/cart/src/index.css
@@ -27,3 +27,102 @@ Navbar
     align-items: center;
     justify-content: center;
 }
+
+h2 {
+    font-size: clamp(1.5rem, 3vw, 3rem); /* Medium heading */
+}
+
+h4 {
+    font-size: clamp(1rem, 2vw, 2rem); /* Extra small heading */
+}
+
+h5 {
+    font-size: clamp(0.875rem, 1.5vw, 1.5rem); /* Tiny heading */
+}
+
+/*
+=============== 
+Cart
+===============
+*/
+
+.cart {
+    min-height: calc(100vh - 5rem);
+    width: 90vw;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-top: 40px;
+    padding: 2.5rem 0;
+}
+
+.cart h2 {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.empty-cart {
+    text-transform: lowercase;
+    color: #64748b;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+hr {
+    background: #cbd5e1;
+    border-color: transparent;
+    margin-bottom: 1rem;
+    border-width: 1px;
+}
+
+.cart footer {
+    margin-top: 5rem;
+    text-align: center;
+}
+
+.cart-total {
+    text-transform: capitalize;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.cart-total span {
+    background: #645cff;
+    display: inline-block;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    color: #fff;
+}
+
+/* buttons */
+
+.btn {
+    cursor: pointer;
+    color: #fff;
+    background: #645cff;
+    border: transparent;
+    border-radius: 0.25rem;
+    letter-spacing: 1px;
+    padding: 0.375rem 0.75rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    transition: 0.3s ease-in-out all;
+    text-transform: capitalize;
+    display: inline-block;
+  }
+
+  .btn:hover {
+    background: #3c3799;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  }
+
+  .btn-hipster {
+    color: #645cff;
+    background: #c1beff;
+  }
+
+  .btn-hipster:hover {
+    color: #c1beff;
+    background: #3c3799;
+  }
