--- a/cart/src/index.css
+++ b/cart/src/index.css
@@ -126,3 +126,72 @@ hr {
     color: #c1beff;
     background: #3c3799;
   }
+
+  /*
+=============== 
+Cart Item
+===============
+*/
+.cart-item {
+    display: grid;
+    align-items: center;
+    grid-template-columns: auto 1fr auto;
+    column-gap: 1.5rem;
+    margin: 1.5rem 0;
+}
+  
+.cart-item img {
+    width: 5rem;
+    height: 5rem;
+    object-fit: cover;
+}
+
+.cart-item h5 {
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: #334155;
+}
+  
+.item-price {
+    color: #64748b;
+    display: block;
+}
+
+.remove-btn {
+    color: #645cff;
+    letter-spacing: 1px;
+    cursor: pointer;
+    font-size: 0.85rem;
+    background: transparent;
+    border-color: transparent;
+    margin-top: 0.375rem;
+    transition: 0.3s ease-in-out all;
+}
+
+.remove-btn:hover {
+    color: #504acc;
+}
+
+.amount-btn {
+    width: 1.5rem;
+    background: transparent;
+    border-color: transparent;
+    cursor: pointer;
+}
+
+.amount-icon {
+    font-size: 1.25rem;
+    color: #645cff;
+    transition: 0.3s ease-in-out all;
+}
+
+.amount-icon:hover {
+    color: #3c3799;
+}
+
+.amount {
+    font-size: 1.25rem;
+    display: block;
+    text-align: center;
+}
