--- a/cart/src/index.css
+++ b/cart/src/index.css
@@ -127,6 +127,24 @@ hr {
     background: #3c3799;
   }
 
+  @keyframes spinner {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .loading {
+    width: 6rem;
+    height: 6rem;
+    border: 5px solid #94a3b8;
+    border-radius: 50%;
+    border-top-color: #645cff;
+    animation: spinner 0.6s linear infinite;
+    margin: 0 auto;
+  }
+  
+
+
   /*
 =============== 
 Cart Item
